Retail Lending-Production/src/objects/Commission__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Eligible__c</fullName>
        <description>(Opportunity__r.Current_Month_Bank_Disbursements__c *  Opportunity__r.Commission_Percentage_from_Bank__c )* for_Each_Stage__c</description>
        <formula>( Opportunity__r.Current_Month_Bank_Disbursements__c * for_Each_Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Revenue Generated for this Opportunity</inlineHelpText>
        <label>Disbursement Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Setting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Achievement Setting</label>
        <referenceTo>Commission_Setting__c</referenceTo>
        <relationshipLabel>Commissions</relationshipLabel>
        <relationshipName>Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_Type__c</fullName>
        <label>Commission Type</label>
        <picklist>
            <picklistValues>
                <fullName>Regular</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>One Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Your Contribution for this Stage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Commissions</relationshipLabel>
        <relationshipName>Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Month_Revenue__c</fullName>
        <formula>( Opportunity__r.Current_Month_Bank_Disbursements__c* Opportunity__r.Commission_Percentage_from_Bank__c )* for_Each_Stage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Month Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Commissions</relationshipLabel>
        <relationshipName>Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stages_Involved__c</fullName>
        <label>Stages Involved</label>
        <picklist>
            <picklistValues>
                <fullName>Lead Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Calling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment Delegation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment Servicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment Follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Sourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application login</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Query solve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Qualification/Valuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Query Solved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disbursement Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Original Agreement Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disbursement login</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>for_Each_Stage__c</fullName>
        <formula>CASE( Stages_Involved__c, &apos;Lead Generation&apos;, 0.15,&apos;Lead Calling&apos;, 0.15,&apos;Lead Qualification&apos;, 0.05, &apos;Appointment Delegation&apos;, 0.07,  &apos;Appointment Servicing&apos;, 0.08, &apos;Appointment Follow up&apos;, 0.08, &apos;Application Sourcing&apos;, 0.07, &apos;Application Processing&apos;,0.05 ,&apos;Application login&apos;,0.05 , &apos;Query solve&apos;,0.05,&apos;Legal Documentation&apos;,0.036, &apos;Legal Qualification/Valuation&apos;,0.036,&apos;Legal Query Solved&apos;,0.036,&apos;Disbursement Documentation&apos;,0.036,&apos;Original Agreement Collection&apos;,0.036,&apos;Disbursement loginelse_result&apos;,0.036,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weightage for this Stage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Commission</label>
    <nameField>
        <label>Commission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>